# ThermoElasticSim

./: .coverage  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  Makefile.libs  README.md  README_en.md  all.txt  build_libs.bat  collect.py  output.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  src.txt  tests.txt
.github/workflows/: docs.yml  lint.yml  test.yml
.lectures/: ~$常数计算模拟v2.docx  弹性常数计算模拟v2.docx
.notes/: MD_Ensembles_Thermostats_Updated.ipynb  Numerical_Integration_Methods_Comparison.ipynb  generator.py
config/: requirements.txt
docs/: Doxyfile  Makefile  custom.css
docs/source/: 01_elastic_fundamentals.rst  02_zero_temperature_elastic.rst  03_md_and_ensembles.rst  04_finite_temperature_elastic.rst  05_elastic_wave.rst  06_advanced_topics.rst  06_potential_extensions.rst  08_howto.rst  conf.py  conventions.rst  index.rst  installation.rst  quickstart.rst  references.bib  yaml_scenarios.rst
docs/source/_static/: custom.css
docs/source/api/: core.rst  elastic.rst  interfaces.rst  md.rst  potentials.rst  utils.rst
docs/source/tutorial/: 01_elastic_fundamentals.ipynb  02_zero_temperature.ipynb  03a_md_nve_nvt.ipynb  03b_md_npt_mtk.ipynb
docs/xml/: Doxyfile.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_df511e5bd85cec96854b39d5e1c27aa8.xml  dir_dfdbda394c3f7a3aa55229f33a559c41.xml  eam__al1_8cpp.xml  index.xml  lennard__jones_8cpp.xml  nose__hoover_8cpp.xml  nose__hoover__chain_8cpp.xml  parrinello__rahman__hoover_8cpp.xml  stress__calculator_8cpp.xml
examples/: calculate_elastic_constants.py  fcc_aluminum_elastic_test.py  fcc_aluminum_high_precision.py  finite_temp_al_benchmark.py  finite_temperature_elastic_constants.py  test_cpp_calculate_forces.py  wave_propagation_simulation.py  zero_temp_al_benchmark.py  zero_temp_cu_benchmark.py  zero_temp_diamond_benchmark.py  zero_temperature_elastic_constants.py
examples/legacy_py/: finite_temp_al_benchmark.py  zero_temp_al_benchmark.py  zero_temp_cu_benchmark.py  zero_temp_diamond_benchmark.py
examples/modern_yaml/: elastic_wave.yaml  elastic_wave_dynamics.yaml  elastic_wave_dynamics_L.yaml  elastic_wave_dynamics_L_quick.yaml  elastic_wave_dynamics_T.yaml  elastic_wave_dynamics_T_quick.yaml  finite_temp_elastic.yaml  finite_temp_small.yaml  npt.yaml  nve.yaml  nvt_andersen.yaml  nvt_berendsen.yaml  nvt_langevin.yaml  nvt_nhc.yaml  nvt_nhc_big.yaml  relax.yaml  zero_temp_elastic.yaml
logs/: plot_traj.py  simplify.py
scripts/: build_libs.bat  collect.py  datetime_updater.py
source/: conf.py  index.rst  python.rst
src/cpp/: CMakeLists.txt  eam_al1.cpp  lennard_jones.cpp  nose_hoover.cpp  nose_hoover_chain.cpp  parrinello_rahman_hoover.cpp  stress_calculator.cpp
src/docs/: Doxyfile
src/docs/xml/: index.xml  lennard__jones_8cpp.xml  nose__hoover_8cpp.xml  nose__hoover__chain_8cpp.xml
src/fortran/: Makefile  nose_hoover.f90  nose_hoover_module.mod  stress_evaluator.f90  structure_optimizer.f90  test.f90  test_module.mod
src/python/: __init__.py  barostats.py  config.py  deformation.py  elasticity.py  finite_temp_elasticity.py  integrators.py  md.py  md_simulation.py  md_simulator.py  mechanics.py  optimizers.py  ploy_lj.py  ploy_test.py  potentials.py  solver.py  strain.py  stress_evaluator.py  structure.py  thermostats.py  utilities.py  utils.py  visualization.py  zeroelasticity.py  zeroelasticity_old.py
src/python/interfaces/: __init__.py  cpp_interface.py  fortran_interface.py
src/thermoelasticsim/: __init__.py
src/thermoelasticsim/_cpp/: bindings.cpp  eam_al1.cpp  eam_cu1.cpp  lennard_jones.cpp  nose_hoover_chain.cpp  parrinello_rahman_hoover.cpp  stress_calculator.cpp  tersoff_c1988.cpp
src/thermoelasticsim/cli/: run.py
src/thermoelasticsim/core/: __init__.py  config.py  crystalline_structures.py  structure.py
src/thermoelasticsim/elastic/: __init__.py  benchmark.py  deformation.py  finite_temp_elasticity.py  materials.py  mechanics.py  zeroelasticity.py
src/thermoelasticsim/fortran/: Makefile  test.f90
src/thermoelasticsim/interfaces/: __init__.py  cpp_interface.py
src/thermoelasticsim/md/: __init__.py  barostats.py  integrators.py  interfaces.py  md_simulator.py  propagators.py  schemes.py  thermostats.py
src/thermoelasticsim/potentials/: __init__.py  base.py  eam.py  lennard_jones.py  mlp.py  potentials.py  tersoff.py
src/thermoelasticsim/utils/: __init__.py  (+7 more)
tests/: al_bcc_deformation_test.ipynb  al_fcc_zero_const_test.ipynb  cal_eam.py  config.yaml  conftest.py  eam_al_bcc.py  eam_al_bcc_voigt.py  eam_al_bcc_without_voigt.py  eam_al_elastic_const.py  eam_al_fcc_voigt.py  eam_npt_nose_prh.py  fcc_al.py  fcc_al_lattice_const.py  force_eam.py  force_ene.py  mechanics_lbfgs.py  ploy_eam1.py  ploy_lj.py  run_tests.py  test_basic.py  test_config.py  test_cpp_interface.py  test_deformation.py  test_elasticity.py  test_lj.py  test_md.py  test_md_simulation.py  test_mechanics.py  test_mechanics_bfgs.py  test_mechanics_lbfgs.py  test_nose_hoover.py  test_optimizers.py  test_pbc.py  test_potentials.py  test_simple_optimizer.py  test_solver.py  test_strain.py  test_stress_evaluator.py  test_structure.py  test_thermostats.py  (+9 more)
tests/cli/: __init__.py  test_run.py
tests/core/: __init__.py  test_config.py  test_crystalline_structures.py  test_structure_atom.py  test_structure_cell.py  test_structure_integration.py
tests/elastic/: __init__.py  test_materials.py  test_mechanics.py
tests/md/: __init__.py  test_andersen_nvt.py  test_berendsen_nvt.py  test_helpers.py  test_mtk_npt.py  test_nhc_basic.py  test_nhc_conservation.py  test_nose_hoover_nvt.py  test_nve_operator.py
tests/potentials/: test_base.py  test_eam.py  test_lennard_jones.py  test_mlp.py  test_potential_curves.py  test_tersoff.py
tests/visualization/: test_api_facade.py
tests/旧版test_zero/: test_mechanics.py  test_zeroelasticity_222_BFGS_visual.py  test_zeroelasticity_444_GD.py  test_zeroelasticity_444_GD_visual.py  zeroelasticity_111.py  zeroelasticity_222.py  zeroelasticity_333_BFGS.py  zeroelasticity_444_BFGS.py  zeroelasticity_444_GD.py
(+48 files in other folders)
