[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "pybind11>=2.11.1",
]
build-backend = "scikit_build_core.build"

[project]
name = "thermoelasticsim"
version = "4.0.0"
description = "热弹性模拟器 - 用于计算材料弹性常数的分子动力学模拟工具"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Gilbert"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "h5py>=3.8.0",
    "numba>=0.57.0",
    "scikit-learn>=1.3.0",
    "setuptools>=61.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "numpydoc>=1.5",
]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.version = ">=3.15"
wheel.packages = ["src/thermoelasticsim"]
install.components = ["python"]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
# 使用 inplace 模式，直接构建到源目录
editable.mode = "inplace"
# 启用实验性功能以支持更好的 editable 安装
experimental = true
# inplace 模式不支持自动重建，设置为 false
editable.rebuild = false
editable.verbose = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["tests/archive"]
addopts = "--tb=short"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

